# forsmost

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
src/: app.rs  cli.rs  config.rs  main.rs  output.rs  search.rs  spec.rs
src/extract/: mod.rs  recover.rs  recover_zip.rs  scan.rs  scan_ole.rs  types.rs
tests/: compare_foremost.rs  elf_gzip_wpd.rs  end_to_end.rs  zip_ole_mp4.rs
tests/support/: compare_foremost.rs  end_to_end.rs  zip_ole_mp4.rs
